--- a/products.css
+++ b/products.css
@@ -237,17 +237,17 @@
 
 .product-card.sbi {
   background: #ffffff;
-  border-color: #1d4ed8;
+  border-color: #0c45e4;
 }
 
 .product-card.bajaj {
   background: #ffffff;
-  border-color: #0ea5e9;
+  border-color: #2bbcff;
 }
 
 .product-card.idfc {
   background: #ffffff;
-  border-color: #8b5cf6;
+  border-color: #a94cff;
 }
 
 .product-header {
