--- a/signup.css
+++ b/signup.css
@@ -8,7 +8,7 @@
 
 /* Body Background */
 body {
-  background: transparent;
+  background: #242424;
   min-height: 100vh;
   display: flex;
   align-items: center;
